remove the need for jvm args